# localrank-mcp

./: README.md  appliku.yml  docker-compose.yml  pyproject.toml  temp
Dockerfile/: Dockerfile
localrank_mcp/: __init__.py
