[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "localrank-mcp"
version = "0.1.0"
description = "LocalRank MCP Server for Claude Desktop"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
localrank-mcp = "localrank_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["localrank_mcp"]
